# exercise-pdf-vision-qa

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
src/: sample.py
